Added Title and About me

--- a/style.css
+++ b/style.css
@@ -1,7 +1,97 @@
-* {
-  margin: 0px;
-  padding: 0px;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
-.hero-image {
+
+/* This is for the tile greeting */
+.banner-area {
+  min-height: 100vh;
+  background-image: url(./assets/theStag.jpg);
+  background-size: cover;
+  -webkit-background-size: cover;
+  background-position: center center;
+}
+
+.wrapper {
+  position: absolute;
   width: 100%;
+  height: 100%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-content {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  transform: translateY(-50%);
+  max-width: 700px;
+}
+
+.text-content h2,
+.text-content h3 {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  transform-origin: left;
+  text-transform: uppercase;
+  transform: scaleX(0);
+  animation: animate-1 1s ease forwards;
+}
+
+.text-content h2 {
+  font-size: 5em;
+  animation-delay: 2s;
+  color: #40413e;
+}
+
+.text-content h3 {
+  font-size: 2em;
+  animation-delay: 3s;
+  color: #40413e;
+}
+
+.text-content h2:before,
+.text-content h3:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #40413e;
+  width: 100%;
+  height: 100%;
+  transform-origin: right;
+  animation: animate-2 1s ease forwards;
+  animation-delay: 3s;
+}
+
+.text-content h3:before {
+  animation-delay: 4s;
+}
+
+@keyframes animate-2 {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0);
+  }
+}
+
+@keyframes animate-1 {
+  0% {
+    transform: scaleX(0);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+/* Greeting End */
+
+.aboutMe {
+  background-color: #96938f;
+  padding: 50px;
 }
