--- a/style.css
+++ b/style.css
@@ -11,6 +11,19 @@ hr {
   margin: 100px auto 100px auto;
 }
 
+.navbar-fixed-top.scrolled {
+  background-color: #40413e !important;
+  transition: background-color 200ms linear;
+}
+.navbar-brand.scrolled {
+  color: whitesmoke !important;
+  transition: background-color 200ms linear;
+}
+.nav-link.scrolled {
+  color: whitesmoke !important;
+  transition: background-color 200ms linear;
+}
+
 /* This is for the tile Hero landing */
 .banner-area {
   min-height: 100vh;
@@ -124,6 +137,13 @@ hr {
 .skill-icon {
   width: 50px;
   height: 50px;
+}
+
+#fs-frm {
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #5a5c52;
+  color: aliceblue;
 }
 
 #fs-frm {
