--- a/style.css
+++ b/style.css
@@ -15,6 +15,18 @@ h5 {
   padding: 15px;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+.project-img {
+  transition: 0.4s ease;
+}
+
+.project-img:hover {
+  filter: brightness(20%);
+}
+
 .navbar-fixed-top.scrolled {
   opacity: 75%;
   background-color: #40413e !important;
@@ -137,11 +149,11 @@ h5 {
 }
 
 #skillBadges {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 70px;
+  padding-bottom: 70px;
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #fs-frm {
@@ -222,7 +234,7 @@ h5 {
 #fs-frm textarea,
 #fs-frm #card-element {
   border: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: rgba(255, 255, 255, 0.9);
+  /* background-color: rgba(255, 255, 255, 0.9); */
   padding: 0.75em 1rem;
   margin-bottom: 1.5rem;
 }
@@ -331,14 +343,31 @@ h5 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.63);
 }
 
+/* Resume Section */
+
 .social-btns {
   color: aliceblue;
   margin-top: 2%;
+  transition: transform 0.35s ease;
+}
+
+.resumeBtn {
+  font-size: x-large;
+  color: #40413e;
+}
+
+.resumeBtn:hover {
+  color: #96938f;
+}
+
+.social-btns:hover {
+  color: #96938f;
+  transform: scale(1.5);
 }
 
 .social {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 #copyright {
@@ -346,7 +375,7 @@ h5 {
   text-align: center;
   font-weight: bold;
   color: grey;
-  padding: 1% 0;
+  padding-top: 2%;
 }
 
 #footerSection {
