--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -39,6 +43,11 @@ a:link {
 .nav-link.scrolled {
   color: whitesmoke !important;
   transition: background-color 200ms linear;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
+  font-weight: bolder;
 }
 
 /* This is for the tile Hero landing */
@@ -352,12 +361,8 @@ a:link {
 }
 
 .resumeBtn {
-  font-size: x-large;
+  font-size: large;
   color: #40413e;
-}
-
-.resumeBtn:hover {
-  color: #96938f;
 }
 
 .social-btns:hover {
