--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ a:link {
   border-radius: 10px;
   padding: 20px;
   background-color: #5a5c52;
-  color: aliceblue;
+  color: black;
 }
 
 #fs-frm {
